# CoVoCa

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.devcontainer/: devcontainer.json
.devcontainer/ubuntu/: Dockerfile
apps/: aruco_calibrate.cpp  voxel_carve.cpp  voxel_grid_demo.cpp
configs/: README.md
configs/calibration/: aruco_sample.yaml
configs/gaussian_splatting/: default.yaml
configs/voxel_carving/: sample.yaml
covoca_toolkit/: README.md  pyproject.toml
covoca_toolkit/src/covoca_toolkit/: download_aruco_sample.py  download_dino_sample.py  generate_cat_masks.py  visualize_voxel_carving.py
datasets/: README.md
datasets/aruco_sample/: README.md  calibration.yaml  voxel_carving.yaml
datasets/cat/: README.md  calibration.yaml  voxel_carving.yaml
datasets/dino_sparse_ring/: README.md  voxel_carving.yaml
docs/development/: tooling.md  voxel_carving_algorithm.md
docs/proposal/: main.bib  main.tex
docs/proposal/sec/: 1_intro.tex  2_requirements.tex  3_milestones.tex
docs/specs/: voxel_carving.md
gsplat_toolkit/: README.md  pyproject.toml
gsplat_toolkit/src/gsplat_toolkit/: __init__.py  download_aruco_sample.py
include/: Camera.h  HelperFunctions.h  Voxel.h  VoxelGrid.h
include/covoca/calibration/: ArucoCalibration.h  CalibrationConfig.h  CalibrationResult.h
include/covoca/config/: ConfigIO.h  EigenReflectors.h  Validators.h
include/covoca/voxel_carving/: CalibratedView.h  ColorImage.h  ColorReconstruction.h  SilhouetteConsistency.h  SilhouetteMask.h  VoxelCarver.h  VoxelCarvingConfig.h  VoxelColorizer.h  VoxelColors.h  VoxelExport.h  VoxelVolume.h
include/gsplat/calibration/: ArucoCalibration.h  CalibrationConfig.h  CalibrationResult.h
include/gsplat/config/: ConfigIO.h  EigenReflectors.h
include/gsplat/voxel/: Voxel.h  VoxelGrid.h
src/: main.cpp
src/covoca/calibration/: ArucoCalibration.cpp  CalibrationConfig.cpp  CalibrationResult.cpp
src/covoca/voxel_carving/: CalibratedView.cpp  ColorImage.cpp  ColorReconstruction.cpp  SilhouetteConsistency.cpp  SilhouetteMask.cpp  VoxelCarver.cpp  VoxelCarvingConfig.cpp  VoxelColorizer.cpp  VoxelColors.cpp  VoxelExport.cpp  VoxelVolume.cpp
src/gsplat/calibration/: ArucoCalibration.cpp  CalibrationConfig.cpp  CalibrationResult.cpp
src/gsplat/voxel/: VoxelGrid.cpp
