[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covoca-toolkit"
version = "0.1.0"
description = "Python helper toolkit for Gaussian Splatting data preparation and analysis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
]

[project.scripts]
download-aruco-sample = "covoca_toolkit.download_aruco_sample:main"
download-dino-sample = "covoca_toolkit.download_dino_sample:main"
visualize-voxel-carving = "covoca_toolkit.visualize_voxel_carving:main"

[project.optional-dependencies]
plot = [
    "plotly>=6.0",
]

[dependency-groups]
dev = [
    "mdformat>=0.7",
    "pre-commit>=4.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/covoca_toolkit"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]
